# engine

./: .gitignore  Cargo.toml  EMBEDDINGS_FIX.md  LICENSE  LLM.md  MODEL_CARD.md  NOTICE  README.md  test_embeddings.py
.github/workflows/: ci.yml  docker.yml  release.yml  test.yml
docs/: DEEPSEEKV2.md  DEEPSEEKV3.md  ISQ.md  QWEN2VL.md  QWEN3.md  README.md  TOOL_CALLING.md  VISION_MODELS.md  WEB_SEARCH.md
hanzo-engine/: Cargo.toml
hanzo-engine/src/: embeddings.rs  main.rs
mistralrs-pyo3/: pyproject.toml
paper/: README.md  paper.aux  paper.bib  paper.tex
scripts/: trigger-release.sh
