[build-system]
requires = ["maturin==1.7"]
build-backend = "maturin"

[project]
name = "mistralrs"
version = "0.6.0"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
]
dynamic = ["description"]

[tool.maturin]
features = ["pyo3/extension-module"]
profile = "release"
